[gd_scene load_steps=3 format=3 uid="uid://baldwbitjdnam"]

[ext_resource type="Script" uid="uid://jxx4tlwge7y7" path="res://scripts/inventory.gd" id="1_d81a8"]
[ext_resource type="PackedScene" uid="uid://dehhmds3pvmkm" path="res://scenes/inventory_slot.tscn" id="2_hj2ta"]

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d81a8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -128.0
offset_right = 288.0
grow_vertical = 0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Slot1" parent="MarginContainer/HBoxContainer" instance=ExtResource("2_hj2ta")]
layout_mode = 2

[node name="Slot2" parent="MarginContainer/HBoxContainer" instance=ExtResource("2_hj2ta")]
layout_mode = 2

[node name="Slot3" parent="MarginContainer/HBoxContainer" instance=ExtResource("2_hj2ta")]
layout_mode = 2
